[gd_scene load_steps=10 format=2]

[ext_resource path="res://character/people.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://character/player.gd" type="Script" id=3]
[ext_resource path="res://weapons/hand_gun/magnum.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/HPGrn.png" type="Texture" id=5]
[ext_resource path="res://assets/HPRed.png" type="Texture" id=6]
[ext_resource path="res://weapons/hand_gun/Mac_10.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.8975
height = 36.1017

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.475
height = 52.3612

[node name="player" instance=ExtResource( 1 )]
z_index = 1
collision_layer = 2147483650
collision_mask = 21
script = ExtResource( 3 )
speed = 300
friction = 0.3
acceleration = 0.5
health = 600.0
totalHealth = 600.0
default_weapon = ExtResource( 4 )
holstered_weap = ExtResource( 7 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="upperbody_sprite" parent="upper_body" index="0"]
rotation = 1.5708
scale = Vector2( 1, 0.5 )
texture = ExtResource( 2 )

[node name="hand" parent="upper_body" index="1"]
position = Vector2( 25, 30 )

[node name="holsters" parent="." index="3"]
visible = false
position = Vector2( 20, 25 )

[node name="Dodge" parent="." index="4"]
offset = Vector2( 0, 45 )

[node name="health_bars" parent="." index="5"]
position = Vector2( 0, -45 )

[node name="Health" parent="health_bars" index="0"]
texture = ExtResource( 6 )

[node name="HealthG" parent="health_bars" index="1"]
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="." index="6"]
current = true
zoom = Vector2( 2, 2 )

[node name="RollTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="RollTimer2" type="Timer" parent="." index="8"]
wait_time = 0.25

[node name="CollisionShape2D" parent="Pre_pickup_Area2D" index="0"]
position = Vector2( 30, 0 )
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="timeout" from="RollTimer" to="." method="_on_RollTimer_timeout"]
